--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "csv-hero",
-  "version": "0.1.0",
+  "version": "0.0.1",
   "description": "CSV Hero will save your day and parse all the CSV files you have",
+  "private": true,
   "main": "dist/csv-hero.js",
   "scripts": {
     "watch": "webpack --mode=development --watch --progress",
@@ -12,6 +13,10 @@
     "parser"
   ],
   "author": "Marius Wieschollek",
+  "repository": {
+    "type": "git",
+    "url": "https://git.mdns.eu/marius/csv-hero.git"
+  },
   "license": "SEE LICENSE IN LICENSE",
   "devDependencies": {
     "webpack": "^4.4.1",
