Fixed document script detection

--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "csv-hero",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "CSV Hero will save your day and parse all the CSV files you have",
   "main": "dist/csv-hero.node.js",
   "scripts": {
-    "watch": "webpack --mode=development --watch --progress",
+    "watch:web": "webpack --mode=development --env.target=web --watch --progress",
+    "watch:node": "webpack --mode=development --env.target=node --watch --progress",
     "build:web": "webpack --mode=production --env.target=web",
     "build:node": "webpack --mode=production --env.target=node"
   },
@@ -19,7 +20,7 @@
   },
   "license": "SEE LICENSE IN LICENSE",
   "devDependencies": {
-    "webpack": "^4.4.1",
+    "webpack": "^4.5.0",
     "webpack-cli": "^2.0.13"
   }
 }
