--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "author": "Marius Wieschollek",
   "repository": {
     "type": "git",
-    "url": "https://git.mdns.eu/marius/csv-hero.git"
+    "url": "https://github.com/marius-wieschollek/csv-hero.git"
   },
   "license": "SEE LICENSE IN LICENSE",
   "devDependencies": {
