--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "csv-hero",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "description": "CSV Hero will save your day and parse all the CSV files you have",
   "main": "dist/csv-hero.node.js",
   "scripts": {
@@ -21,7 +21,7 @@
   },
   "license": "SEE LICENSE IN LICENSE",
   "devDependencies": {
-    "webpack": "^4.5.0",
-    "webpack-cli": "^2.0.14"
+    "webpack": "4.18.0",
+    "webpack-cli": "3.1.0"
   }
 }
